사진 업로드 기능

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!--<ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/logo_title" />-->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -47,16 +43,14 @@
         android:background="@color/colorDivision"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:orientation="horizontal"
+        android:orientation="horizontal"></LinearLayout>
 
-        ></LinearLayout>
-
-    <!--<com.google.android.material.bottomnavigation.BottomNavigationView
-    android:layout_above="@id/bottom_navigation"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_above="@id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottom_navigation"
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_navigation_main">
-    </com.google.android.material.bottomnavigation.BottomNavigationView>-->
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 </RelativeLayout>
