--- a/app/src/main/res/layout/activity_add_photo.xml
+++ b/app/src/main/res/layout/activity_add_photo.xml
@@ -8,10 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="35dp">
 
-        <ImageView
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/logo_title"/>
+            android:fontFamily="@font/is_font"
+            android:gravity="center"
+            android:textSize="21dp"
+            android:text="MLinstagram"/>
+
 
     </androidx.appcompat.widget.Toolbar>
     <LinearLayout
@@ -39,11 +43,11 @@
             android:gravity="top"
             android:id="@+id/addphoto_edit_explain"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:hint="Image description"/>
     </com.google.android.material.textfield.TextInputLayout>
     <Button
-        android:id="@+id/addphto_btn_upload"
+        android:id="@+id/addphoto_btn_upload"
         android:text="Photo Upload"
         android:layout_toRightOf="@+id/addphoto_image"
         android:theme="@style/ButtonStyle"
