--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,24 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="22dp"
+                android:src="@drawable/ic_arrow_back"
+                android:id="@+id/toolbar_btn_back"/>
             <TextView
+                android:id="@+id/toolbar_username"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="16sp"
+                android:text="UserID"
+                android:textColor="@color/colorNavIcon"
+                android:gravity="center"
+                android:layout_toRightOf="@id/toolbar_btn_back"/>
+            <TextView
+                android:id="@+id/toolbar_title_textview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
